--- a/dark.css
+++ b/dark.css
@@ -82,7 +82,7 @@ canvas {
     font-size: 48px;
     margin-top: 100px;
     font-weight: 600;
-    color: #333;
+    color: #aaaaaa;
     background: #3c3c3c;
     padding: 40px 40px;
     border-radius: 15px;
