--- a/style.css
+++ b/style.css
@@ -88,3 +88,7 @@ html, body {
             height: 40px;
             margin-right: 8px;
         }
+        #eta{
+            color: #444;
+            padding-left:5px;
+        }
