--- a/dark.css
+++ b/dark.css
@@ -96,3 +96,7 @@ canvas {
     height: 40px;
     margin-right: 8px;
 }
+#eta{
+            color: #aaaaaa;
+            padding-left:5px;
+        }
