--- a/dark.css
+++ b/dark.css
@@ -20,10 +20,9 @@ body {
     background-color: fuchsia;
 }
 .climad {
-    border-radius: 20px;
-    bottom: 0;
-    box-shadow: inset 0 0 20px 1px #818181;
-}
+        bottom: 0;
+        filter: drop-shadow(0 6px 10px rgba(0, 0, 0, 0.35));
+        }
 
 /* Top Bar */
 .top-bar {
