--- a/style.css
+++ b/style.css
@@ -14,9 +14,8 @@ html, body {
             margin-top: 0;
         }
         .climad {
-        border-radius: 20px;
         bottom: 0;
-        box-shadow: inset 0 0 20px 1px #818181;
+        filter: drop-shadow(0 6px 10px rgba(0, 0, 0, 0.35));
         }
         /* Top Bar */
         .top-bar {
