--- a/dark.css
+++ b/dark.css
@@ -21,7 +21,7 @@ body {
 }
 .climad {
         bottom: 0;
-        filter: drop-shadow(0 6px 10px rgba(255, 255, 255, 0.55));
+        filter: drop-shadow(0 6px 10px rgba(255, 255, 255));
         }
 
 /* Top Bar */
