--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ html, body {
         }
         .climad {
         bottom: 0;
-        filter: drop-shadow(0 6px 10px rgba(0, 0, 0, 0.35));
+        filter: drop-shadow(0 6px 10px rgb(0, 0, 0));
         }
         /* Top Bar */
         .top-bar {
