--- a/dark.css
+++ b/dark.css
@@ -5,7 +5,7 @@ body {
 }
 
 body {
-    background: #606060;
+    background: #6e6e6e;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
     display: grid;
     grid-template-rows: 80px 1fr;
@@ -81,8 +81,8 @@ canvas {
     font-size: 48px;
     margin-top: 100px;
     font-weight: 600;
-    color: #aaaaaa;
-    background: #3c3c3c;
+    background: #aaaaaa;
+    color: #3c3c3c;
     padding: 40px 40px;
     border-radius: 15px;
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
