fixed label dark

--- a/dark.css
+++ b/dark.css
@@ -72,6 +72,12 @@ canvas {
     font-size: 24px;
     font-weight: 500;
 }
+.labelbig{
+            color: #aaaaaa;
+            margin-top: 12px;
+            font-size: 40px;
+            font-weight: 500;
+        }
 
 .digital-clock {
     font-size: 48px;
