--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ html, body {
             font-size: 24px;
             font-weight: 500;
         }
-        .label-big{
+        .labelbig{
             color: #353535;
             margin-top: 12px;
             font-size: 40px;
