fixed dark template areas

--- a/dark.css
+++ b/dark.css
@@ -52,12 +52,55 @@ body {
 
 }
 
-.clock-container {
-    text-align: center;
-    margin-top: 100px;
-    margin-left: 100px;
-    margin-right: 100px;
-}
+#clockContainer{
+            display: grid;
+            grid-template-rows: auto auto;
+            grid-template-areas: "topRow"
+                                "botRow";
+        }
+        .ptContainer{
+            grid-area: portu;
+        }
+
+        .esContainer{
+            grid-area: espan;
+        }
+
+        .clock-row-up{
+            grid-area: topRow;
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr 1fr ;
+            grid-template-areas: 
+            ". portu espan .";
+            
+        }
+        .clock-row-down{
+            grid-area: botRow;
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+            grid-template-areas: 
+            "bras chil colom per arge";
+        }
+
+        .clContainer{
+            grid-area: chil;
+        }
+
+        .coContainer{
+            grid-area: colom;
+        }
+
+        .peContainer{
+            grid-area: per;
+        }
+
+        .arContainer{
+            grid-area: arge;
+        }
+
+        .brContainer{
+            grid-area: bras;
+        }
 
 canvas {
     height: 300px;
