--- a/dark.css
+++ b/dark.css
@@ -1,58 +1,72 @@
-html,
-body {
+    html, body {
     margin: 0;
     height: 100%;
 }
-
-body {
-    background: #6e6e6e;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-    display: grid;
-    grid-template-rows: 80px 1fr;
-    grid-template-areas: "top-bar"
-
-        "grid";
-    align-items: center;
-    margin-top: 0;
-}
-.climad {
+        body {
+            background: #6e6e6e;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+            display: grid;
+            grid-template-rows: 80px  1fr;
+            grid-template-areas: "top-bar"
+                                 
+                                 "grid";
+            align-items: center;
+            margin-top: 0;
+        }
+        .climad {
         bottom: 0;
-        filter: drop-shadow(0 6px 10px rgba(255, 255, 255));
+        filter: drop-shadow(0 6px 10px rgb(255, 255, 255));
+        }
+        /* Top Bar */
+        .top-bar {
+            margin-top: 0;
+            width: 100%;
+            height: 75px;
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            background: #2d2d2d;
+            box-shadow: 0 2px 10px rgba(255, 255, 255, 0.1);
+            grid-area: "top-bar";
+            color: #cccccc;
         }
 
-/* Top Bar */
-.top-bar {
-    margin-top: 0;
-    width: 100%;
-    /* height: 75px; */
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    background: #2d2d2d;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    grid-area: "top-bar";
-    color: #cccccc;
-}
+        .top-item {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 24px;
+            font-weight: 600;
+        }
 
-.top-item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 24px;
-    font-weight: 600;
-}
+        /* Clock Grid */
+        .grid {
+            display: grid;
 
-/* Clock Grid */
-.grid {
-    display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-rows: 1fr 1fr;
+            height: calc(100%);
+            grid-area: "grid";
 
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    height: calc(100%);
-    grid-area: "grid";
+        }
 
-}
+        .clock-container {
+            text-align: center;
+            /* margin-top: 30px; */
+            margin-bottom: 30px;
+            margin-left: 100px;
+            margin-right: 100px;
+            
+        }
 
-#clockContainer{
+        .clock-container-small {
+            text-align: center;
+            margin-top: 30px;
+            margin-left: 30px;
+            margin-right: 30px;
+            
+        }
+
+        #clockContainer{
             display: grid;
             grid-template-rows: auto auto;
             grid-template-areas: "topRow"
@@ -102,45 +116,46 @@ body {
             grid-area: bras;
         }
 
-canvas {
-    height: 300px;
-    background: #4c4c4c;
-    border-radius: 50%;
-    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
-}
+        
 
-.label {
-    color: #aaaaaa;
-    margin-top: 12px;
-    font-size: 24px;
-    font-weight: 500;
-}
-.labelbig{
+        canvas {
+            height: 300px;
+            background: #4c4c4c;
+            border-radius: 50%;
+            box-shadow: 0 10px 25px rgba(0,0,0,0.15);
+        }
+
+        .label {
+            color: #aaaaaa;
+            margin-top: 12px;
+            font-size: 24px;
+            font-weight: 500;
+        }
+        .labelbig{
             color: #aaaaaa;
             margin-top: 12px;
             font-size: 40px;
             font-weight: 500;
         }
+        .digital-clock {
+            font-size: 48px;
+            margin-top: 100px;
+            font-weight: 600;
+            color: #3c3c3c;
+            background: #aaaaaa;
+            padding: 40px 40px;
+            border-radius: 15px;
+            box-shadow: 0 10px 25px rgba(0,0,0,0.15);
+            text-align: center;
+        }
 
-.digital-clock {
-    font-size: 48px;
-    margin-top: 100px;
-    font-weight: 600;
-    background: #aaaaaa;
-    color: #3c3c3c;
-    padding: 40px 40px;
-    border-radius: 15px;
-    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
-    text-align: center;
-}
-
-/* Weather Box */
-#weatherBox img {
-    vertical-align: middle;
-    height: 40px;
-    margin-right: 8px;
-}
-#eta{
+        /* Weather Box */
+        #weatherBox img {
+            vertical-align: middle;
+            height: 40px;
+            margin-right: 8px;
+        }
+        #eta{
             color: #aaaaaa;
             padding-left:5px;
         }
