--- a/dark.css
+++ b/dark.css
@@ -126,13 +126,13 @@
         }
 
         .label {
-            color: #aaaaaa;
+            color: #ccc;
             margin-top: 12px;
             font-size: 24px;
             font-weight: 500;
         }
         .labelbig{
-            color: #aaaaaa;
+            color: #ccc;
             margin-top: 12px;
             font-size: 40px;
             font-weight: 500;
