--- a/dark.css
+++ b/dark.css
@@ -11,7 +11,7 @@
                                  
                                  "grid";
             align-items: center;
-            margin-top: 0;
+            margin-top: -5px;
         }
         .climad {
         bottom: 0;
@@ -26,7 +26,7 @@
             grid-template-columns: 1fr 1fr 1fr;
             background: #2d2d2d;
             box-shadow: 0 2px 10px rgba(255, 255, 255, 0.1);
-            grid-area: "top-bar";
+            grid-area: top-bar;
             color: #cccccc;
         }
 
