--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html, body {
                                  
                                  "grid";
             align-items: center;
-            margin-top: 0;
+            margin-top: -7px;
         }
         .climad {
         bottom: 0;
